Melhora espaçamento de padding no Menu

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -215,3 +215,9 @@ label {
 .create-post__form textarea {
   height: 200px;
 }
+
+/*******************************************/
+
+.MuiDrawer-paper {
+  padding: 20px 40px;
+}
